--- a/src/app/dashboard/company-revenue-report/company-revenue-report.component.html
+++ b/src/app/dashboard/company-revenue-report/company-revenue-report.component.html
@@ -1,5 +1,8 @@
 <mat-toolbar fxLayoutGap='20px'>Overall Amount Report</mat-toolbar>
-<div fxLayout='row' fxLayoutGap="10px">
+<div fxLayout="row" fxLayoutAlign="center center"  class = 'spinner' *ngIf="loading else loaded">
+  <mat-spinner mode="indeterminate" ></mat-spinner>
+</div>
+<div fxLayout='row' *ngIf="!loading else loaded" fxLayoutGap="10px">
   <highcharts-chart 
     [Highcharts]="highcharts" 
     [options]="chartOptions"
