added loader and change forloop() to foreach() and get array last element

--- a/src/app/dashboard/order-revenue-report/order-revenue-report.component.scss
+++ b/src/app/dashboard/order-revenue-report/order-revenue-report.component.scss
@@ -1,8 +1,6 @@
 mat-toolbar {
-  background: #D3D3D3;
+  background: #d3d3d3;
   font-size: 16pt;
   font-display: bold;
 }
-.color{
-  color: #ff983d
-}
+
