--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,19 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; background: #030303}
-.margin-top20px{
-    margin-top: 20px;
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+  background: #030303;
+}
+.margin-top20px {
+  margin-top: 20px;
+}
+.spinner {
+  width: 100%;
+  height: 300px;
+  display: block;
 }
