--- a/src/app/dashboard/company-revenue-report/company-revenue-report.component.html
+++ b/src/app/dashboard/company-revenue-report/company-revenue-report.component.html
@@ -1,16 +1,16 @@
-<mat-toolbar fxLayoutGap='20px'>Overall Amount Report</mat-toolbar>
+<mat-toolbar fxLayoutGap='20px' class="toolbar"><b>Overall Amount Report</b></mat-toolbar>
 <div fxLayout="row" fxLayoutAlign="center center"  class = 'spinner' *ngIf="loading else loaded">
   <mat-spinner mode="indeterminate" ></mat-spinner>
 </div>
 <div fxLayout='row' *ngIf="!loading else loaded" fxLayoutGap="10px">
   <highcharts-chart 
     [Highcharts]="highcharts" 
-    [options]="chartOptions"
+    [options]="companyChartOptions"
     style="width: 100%; height: 300px; display: block;">
   </highcharts-chart>
   <highcharts-chart 
     [Highcharts]="highcharts" 
-    [options]="monthChartOptions"
+    [options]="officeChartOptions"
     style="width: 100%; height: 300px; display: block;">
   </highcharts-chart>
 </div>
