--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,7 +1,7 @@
-<mat-toolbar color='primary' fxLayout="row">
+<mat-toolbar fxLayout="row">
     <div fxLayout="column" fxLayoutAlign="start center"fxFlex="20">
         <a class="navbar-brand" href="index.html">
-            <img src="assets/images/logo-white.png" alt="homepage" class="light-logo">
+            <img src="assets/images/logo-black.png" alt="homepage" class="light-logo">
         </a>
     </div>
     <div fxLayout="column" fxLayoutAlign="end end"fxFlex="80"></div>
