--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,6 +1,4 @@
-<div fxLayout="column" fxLayoutAlign="space-between none" fxLayoutGap="20px">
+<div fxLayout="column" fxLayoutAlign="space-between none">
     <app-header></app-header>
-    <app-order-revenue-report></app-order-revenue-report>
-    <app-company-revenue-report></app-company-revenue-report>
     <app-company-revenue-year-amount></app-company-revenue-year-amount>
 </div>
