scroll bar css removed selected option text color changed

--- a/src/app/dashboard/company-revenue-year-amount/company-revenue-year-amount.component.scss
+++ b/src/app/dashboard/company-revenue-year-amount/company-revenue-year-amount.component.scss
@@ -19,11 +19,7 @@ mat-toolbar {
   padding-bottom: 0.1em;
 }
 
-//  :host /deep/ .mat-select-value-text {
-//   color:#F16230 !important;
-//   font-style: bold !important;
-// } 
-// .scroll{
-//     width: 100%;
-//   overflow-x :scroll;
-// }
+ :host /deep/ .mat-select-value-text {
+  color:#F16230 !important;
+  font-style: bold !important;
+} 
