--- a/src/app/dashboard/company-revenue-year-amount/company-revenue-year-amount.component.html
+++ b/src/app/dashboard/company-revenue-year-amount/company-revenue-year-amount.component.html
@@ -7,10 +7,11 @@
       <mat-label class='text-center'>Select Year</mat-label>
       <mat-select [(ngModel)]="yearValue" formControlName="year">
         <mat-option *ngFor="let year of selectYearOptions" [value]="year.selectYearValue">
-          {{year.selectYearValue|| "Select Year"}}
+          {{year.selectYearValue}}
         </mat-option>
       </mat-select>
     </mat-form-field>
+    <!-- Company Selection Field -->
     <mat-form-field appearance="outline" fxFlex=60>
       <mat-label class='text-center'>Select Company</mat-label>
       <mat-select [(ngModel)]="companyValue" formControlName="company">
@@ -21,6 +22,7 @@
     </mat-form-field>
   </form>
 </mat-toolbar>
+<!-- Loader -->
 <div fxLayout="row" fxLayoutAlign="center center" class='spinner' *ngIf="loading else loaded">
   <mat-spinner mode="indeterminate"></mat-spinner>
 </div>
@@ -30,9 +32,7 @@
   <highcharts-chart id="company" [Highcharts]="highcharts" [options]="chartOptions"
     style="width: 100%; height: 400px; display: block;">
   </highcharts-chart>
-  <div class="scroll">
-    <highcharts-chart id="container" [Highcharts]="highcharts" [options]="offChartOptions" [ngModel]="offChart"
-      style=" width:120%; height: 400px; display: block;">
-    </highcharts-chart>
-  </div>
+  <highcharts-chart id="container" [Highcharts]="highcharts" [options]="offChartOptions"
+    style=" width:100%; height: 400px; display: block;">
+  </highcharts-chart>
 </div>
