--- a/src/app/dashboard/company-revenue-year-amount/company-revenue-year-amount.component.html
+++ b/src/app/dashboard/company-revenue-year-amount/company-revenue-year-amount.component.html
@@ -1,38 +1,40 @@
 <!-- Toolbar -->
-<mat-toolbar fxLayout="row" fxLayoutAlign="center center" class="toolbar">
-  <span fxFlex="50"><b>Year Wise Amount Detail</b></span>
-  <!-- Year Selection Field -->
-  <form [formGroup]="formGroup" fxLayout="row" fxFlex>
-    <mat-form-field appearance="outline" fxFlex=40>
-      <mat-label class='text-center'>Select Year</mat-label>
-      <mat-select [(ngModel)]="yearValue" formControlName="year">
-        <mat-option *ngFor="let year of selectYearOptions" [value]="year.selectYearValue">
-          {{year.selectYearValue}}
-        </mat-option>
-      </mat-select>
-    </mat-form-field>
-    <!-- Company Selection Field -->
-    <mat-form-field appearance="outline" fxFlex=60>
-      <mat-label class='text-center'>Select Company</mat-label>
-      <mat-select [(ngModel)]="companyValue" formControlName="company">
-        <mat-option *ngFor="let company of selectCompanyOptions" [value]="company.selectCompanyValue">
-          {{company.selectCompanyName}}
-        </mat-option>
-      </mat-select>
-    </mat-form-field>
-  </form>
-</mat-toolbar>
-<!-- Loader -->
-<div fxLayout="row" fxLayoutAlign="center center" class='spinner' *ngIf="loading else loaded">
-  <mat-spinner mode="indeterminate"></mat-spinner>
-</div>
-<!-- Charts -->
-<div fxLayout='column' fxLayoutGap="10px" *ngIf="!loading else loaded">
-  <!-- Year Wise Company & Office Charts -->
-  <highcharts-chart id="company" [Highcharts]="highcharts" [options]="companyChartOptions"
-    style="width: 100%; height: 400px; display: block;">
-  </highcharts-chart>
-  <highcharts-chart id="office" [Highcharts]="highcharts" [options]="officeChartOptions"
-    style=" width:100%; height: 400px; display: block;">
-  </highcharts-chart>
+<div class="chart-dashboard">
+  <mat-toolbar fxLayout="row" fxLayoutAlign="center center" class="toolbar">
+    <span fxFlex="50"><b>Cart-Orders Summary</b></span>
+    <!-- Year Selection Field -->
+    <form [formGroup]="formGroup" fxLayout="row" fxFlex>
+      <mat-form-field appearance="outline" fxFlex=40>
+        <mat-label class='text-center'>Select Year</mat-label>
+        <mat-select [(ngModel)]="yearValue" formControlName="year">
+          <mat-option *ngFor="let year of selectYearOptions" [value]="year.selectYearValue">
+            {{year.selectYearValue}}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+      <!-- Company Selection Field -->
+      <mat-form-field appearance="outline" fxFlex=60>
+        <mat-label class='text-center'>Select Company</mat-label>
+        <mat-select [(ngModel)]="companyValue" formControlName="company">
+          <mat-option *ngFor="let company of selectCompanyOptions" [value]="company.selectCompanyValue">
+            {{company.selectCompanyName}}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+    </form>
+  </mat-toolbar>
+  <!-- Loader -->
+  <div fxLayout="row" fxLayoutAlign="center center" class='spinner' *ngIf="loading else loaded">
+    <mat-spinner mode="indeterminate"></mat-spinner>
+  </div>
+  <!-- Charts -->
+  <div fxLayout='column' fxLayoutGap="10px" *ngIf="!loading else loaded">
+    <!-- Year Wise Company & Office Charts -->
+    <highcharts-chart id="company" [Highcharts]="highcharts" [options]="companyChartOptions"
+      style="width: 100%; height: 400px; display: block;">
+    </highcharts-chart>
+    <highcharts-chart id="office" [Highcharts]="highcharts" [options]="officeChartOptions"
+      style=" width:100%; height: 400px; display: block;">
+    </highcharts-chart>
+  </div>
 </div>
