--- a/src/app/dashboard/company-revenue-year-amount/company-revenue-year-amount.component.scss
+++ b/src/app/dashboard/company-revenue-year-amount/company-revenue-year-amount.component.scss
@@ -1,25 +1,27 @@
-mat-toolbar {
-  background: #d3d3d3;
-  font-size: 16pt;
-  font-display: bold;
-  padding: 5px;
-}
-.company-select {
-  width: 70% !important;
-}
-::ng-deep .mat-form-field-appearance-outline {
-  display: inline-block !important;
-  font-size: 14px;
-  padding: 10px;
-  color: #020202 !important;
-  font-style: bold !important;
-}
+.chart-dashboard {
+  mat-toolbar {
+    background: #d3d3d3;
+    font-size: 16pt;
+    font-display: bold;
+    padding: 5px;
+  }
+  .company-select {
+    width: 70% !important;
+  }
+  ::ng-deep .mat-form-field-appearance-outline {
+    display: inline-block !important;
+    font-size: 14px;
+    padding: 10px;
+    color: #020202 !important;
+    font-style: bold !important;
+  }
 
-::ng-deep .mat-form-field-wrapper {
-  padding-bottom: 0.1em;
-}
+  ::ng-deep .mat-form-field-wrapper {
+    padding-bottom: 0.1em;
+  }
 
-:host /deep/ .mat-select-value-text {
-  color: #f16230 !important;
-  font-style: bold !important;
+  :host /deep/ .mat-select-value-text {
+    color: #f16230 !important;
+    font-style: bold !important;
+  }
 }
