monthbilloffice chart added

--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -3,7 +3,7 @@
     background: #fff !important;
   }
   .button {
-    color: #fff;
-    background: #F16230;
+    color: #F16230;
+    background: #fff;
   }
 }
