--- a/src/app/dashboard/company-revenue-year-amount/company-revenue-year-amount.component.html
+++ b/src/app/dashboard/company-revenue-year-amount/company-revenue-year-amount.component.html
@@ -30,10 +30,13 @@
   <!-- Charts -->
   <div fxLayout='column' fxLayoutGap="10px" *ngIf="!loading else loaded">
     <!-- Year Wise Company & Office Charts -->
-    <highcharts-chart id="company" [Highcharts]="highcharts" [options]="companyChartOptions"
+    <highcharts-chart id="month-amt" [Highcharts]="highcharts" [options]="monthlyAmtChartOptions"
       style="width: 100%; height: 400px; display: block;">
     </highcharts-chart>
-    <highcharts-chart id="office" [Highcharts]="highcharts" [options]="officeChartOptions"
+    <highcharts-chart id="office-amt" [Highcharts]="highcharts" [options]="officeAmtChartOptions"
+      style=" width:100%; height: 400px; display: block;">
+    </highcharts-chart>
+    <highcharts-chart id="bill-amt" [Highcharts]="highcharts" [options]="officeAmtChartOptions"
       style=" width:100%; height: 400px; display: block;">
     </highcharts-chart>
   </div>
