unwanted folders removed,bill office chart added,file names are changed

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -11,5 +11,5 @@
             </button>
         </div>
     </mat-toolbar>
-    <app-company-revenue-year-amount></app-company-revenue-year-amount>
+    <app-chart-report></app-chart-report>
 </div>
