comments added and lint errors fixed

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,6 +16,5 @@ body {
 }
 .toolbar {
   background: #fff !important;
-  margin: 10px 0px 10px 0px !important
+  margin: 10px 0px 10px 0px !important;
 }
-
