pdf button removed

--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -1,9 +1,9 @@
-.dashboard-header{
+.dashboard-header {
   mat-toolbar {
     background: #fff !important;
   }
   .button {
-    color: #F16230;
+    color: #f16230;
     background: #fff;
   }
 }
