--- a/src/app/dashboard/chart-report/chart-report.component.scss
+++ b/src/app/dashboard/chart-report/chart-report.component.scss
@@ -24,4 +24,10 @@
     color: #f16230 !important;
     font-style: bold !important;
   }
+
+  .chart-size {
+    width: 100%;
+    height: 400px;
+    display: block;
+  }
 }
