office bill chart id name changed

--- a/src/app/dashboard/chart-report/chart-report.component.html
+++ b/src/app/dashboard/chart-report/chart-report.component.html
@@ -45,7 +45,7 @@
     </highcharts-chart>
     <!-- Office Wise Bill to Office Charts-->
     <highcharts-chart 
-      id="bill-amt" 
+      id="office-bill" 
       [Highcharts]="highcharts" 
       [options]="officeChartOptions" 
       class="chart-size">
